--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "mitchellvanw/laravel-doctrine",
-    "description": "The Doctrine 2 implementation that melts with Laravel 4",
+    "name": "jorrit77/laravel-doctrine",
+    "description": "The Doctrine 2 implementation that melts with Laravel 4 on PHP 5.3",
     "version": "0.5.0",
     "keywords": ["doctrine", "doctrine 2", "orm", "laravel"],
     "license": "MIT",
@@ -8,10 +8,13 @@
         {
             "name": "Mitchell van Wijngaarden",
             "email": "mitchell@kooding.nl"
-        }
-    ],
+        },
+        {
+            "name": "Jorrit Steetskamp",
+            "email": "jorrit@rezept.nl"
+        }    ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=5.3",
         "illuminate/support": "4.*|5.*",
         "doctrine/orm": "2.5.*",
         "doctrine/migrations": "1.*"
